# OpenGL-Playground

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/core/: application.cpp  application.h  layer.h  layer_stack.cpp  layer_stack.h
src/examples/: triangle.cpp  triangle.h
src/imgui/: imgui_layer.cpp  imgui_layer.h
